cmake_minimum_required(VERSION 2.8.4)
project(Test)

find_package(OpenCV REQUIRED)
FIND_PACKAGE(Ceres REQUIRED)
INCLUDE_DIRECTORIES(${CERES_INCLUDE_DIRS})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_library(MyLib include/saveMesh.cpp)

add_executable(MyRansac MyRansac.cpp)
add_executable(MyAContrarioRansac MyAContrarioRansac.cpp)
add_executable(BestTextureFilter BestTextureFilter.cpp)
add_executable(MultiBandPanoramaBlending MultiBandPanoramaBlending.cpp)
add_executable(PanoramaBlending PanoramaBlending.cpp)
add_executable(PanoramaBlending2 PanoramaBlending2.cpp)
add_executable(CeresTest CeresTest.cpp)
add_executable(CeresJacobianTest CeresJacobianTest.cpp)
add_executable(CeresBundleAdjuster simple_bundle_adjuster.cc)
add_executable(ManualJacobianBundleAdjuster ManualJacobianBundleAdjuster.cpp)

target_link_libraries(MyRansac ${OpenCV_LIBS})
target_link_libraries(MyAContrarioRansac ${OpenCV_LIBS})
target_link_libraries(BestTextureFilter ${OpenCV_LIBS})
target_link_libraries(MultiBandPanoramaBlending ${OpenCV_LIBS})
target_link_libraries(PanoramaBlending ${OpenCV_LIBS})
target_link_libraries(PanoramaBlending2 ${OpenCV_LIBS})
target_link_libraries(CeresTest ${OpenCV_LIBS} ${CERES_LIBRARIES})
target_link_libraries(CeresJacobianTest ${OpenCV_LIBS} ${CERES_LIBRARIES})
TARGET_LINK_LIBRARIES(CeresBundleAdjuster ${CERES_LIBRARIES} MyLib)
TARGET_LINK_LIBRARIES(ManualJacobianBundleAdjuster ${CERES_LIBRARIES} MyLib)